2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/cleanup_group.c: Fix compilation when compiled without
	shadow group support.

2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupdel.c: Remove the fail_exit () declaration.

2008-12-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Fix the support for usernames with arbitrary
	length.

2008-12-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c, src/groupdel.c, src/groupmod.c: Re-indent.
	* src/groupmod.c: Do not add the command synopsis to the main ()
	documentation. This avoids outdated information.
	* libmisc/chkname.c: Remove outdated comments.

2008-12-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/audit_help.c: Added audit_logger_message() to log
	messages not related to an account.
	* lib/prototypes.h, libmisc/cleanup.c, libmisc/cleanup_group.c,
	libmisc/cleanup_user.c, libmisc/Makefile.am: Added stack of
	cleanup functions to be executed on exit.
	* NEWS, src/groupadd.c, src/groupdel.c, src/groupmod.c: Only
	report success to audit and syslog when the changes are committed
	to the system. Do not log failure for on-memory changes to audit
	or syslog. Make sure failures and inconsistencies will be reported
	in case of unexpected failures (e.g. malloc failures). Only
	specify an audit message if it is not implicitly implied by the
	type argument. Removed fail_exit (replaced by atexit(do_cleanups)).

2008-12-15  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Added support usernames with arbitrary
	length.

2008-11-27  Mike Frysinger  <vapier@gentoo.org>

	* configure.in: Fix the "$enable_acct_tools_setuid" = "yes" test.

2008-11-27  Mike Frysinger  <vapier@gentoo.org>

	* NEWS, configure.in, libmisc/chkname.c: make group max length a
	configure option.  The configure behavior encoded is:
	<no option> -> default of 16 (like today);